@@ -375,7 +375,9 @@ class Collection(object):
     def filter(self, *args, **kwds):
         """Returns an iterator over records, but filtered by a test for
         spatial intersection with the provided ``bbox``, a (minx, miny,
-        maxx, maxy) tuple or a geometry ``mask``.
+        maxx, maxy) tuple or a geometry ``mask``. An attribute filter can
+        be set using an SQL ``where`` clause, which uses the `OGR SQL dialect
+        <https://gdal.org/user/ogr_sql_dialect.html#where>`__.
 
         Positional arguments ``stop`` or ``start, stop[, step]`` allows
         iteration to skip over items or stop at a specific item.
@@ -399,15 +401,18 @@ class Collection(object):
         mask = kwds.get('mask')
         if bbox and mask:
             raise ValueError("mask and bbox can not be set together")
+        where = kwds.get('where')
         self.iterator = Iterator(
-            self, start, stop, step, bbox, mask)
+            self, start, stop, step, bbox, mask, where)
         return self.iterator
 
     def items(self, *args, **kwds):
         """Returns an iterator over FID, record pairs, optionally
         filtered by a test for spatial intersection with the provided
         ``bbox``, a (minx, miny, maxx, maxy) tuple or a geometry
-        ``mask``.
+        ``mask``. An attribute filter can be set using an SQL ``where``
+        clause, which uses the `OGR SQL dialect
+        <https://gdal.org/user/ogr_sql_dialect.html#where>`__.
 
         Positional arguments ``stop`` or ``start, stop[, step]`` allows
         iteration to skip over items or stop at a specific item.
@@ -431,15 +436,18 @@ class Collection(object):
         mask = kwds.get('mask')
         if bbox and mask:
             raise ValueError("mask and bbox can not be set together")
+        where = kwds.get('where')
         self.iterator = ItemsIterator(
-            self, start, stop, step, bbox, mask)
+            self, start, stop, step, bbox, mask, where)
         return self.iterator
 
     def keys(self, *args, **kwds):
         """Returns an iterator over FIDs, optionally
         filtered by a test for spatial intersection with the provided
         ``bbox``, a (minx, miny, maxx, maxy) tuple or a geometry
-        ``mask``.
+        ``mask``. An attribute filter can be set using an SQL ``where``
+        clause, which uses the `OGR SQL dialect
+        <https://gdal.org/user/ogr_sql_dialect.html#where>`__.
 
         Positional arguments ``stop`` or ``start, stop[, step]`` allows
         iteration to skip over items or stop at a specific item.
@@ -462,8 +470,9 @@ class Collection(object):
         mask = kwds.get('mask')
         if bbox and mask:
             raise ValueError("mask and bbox can not be set together")
+        where = kwds.get('where')
         self.iterator = KeysIterator(
-            self, start, stop, step, bbox, mask)
+            self, start, stop, step, bbox, mask, where)
         return self.iterator
 
     def __contains__(self, fid):
